adding sql support for the service

--- a/SimpleUrlListSLN/SimpleUrlList.Api/appsettings.json
+++ b/SimpleUrlListSLN/SimpleUrlList.Api/appsettings.json
@@ -7,6 +7,7 @@
   },
   "AllowedHosts": "*",
   "AuthOptions": {
-    "ApiKey": ""
+    "ApiKey": "",
+    "SaltHash": "ThisIsAnExampleSaltHash"
   }
 }
