--- a/SimpleUrlListSLN/SimpleUrlList.Interfaces/SimpleUrlList.Interfaces.csproj
+++ b/SimpleUrlListSLN/SimpleUrlList.Interfaces/SimpleUrlList.Interfaces.csproj
@@ -8,6 +8,7 @@
 
     <ItemGroup>
       <ProjectReference Include="..\SimpleUrlList.Models\SimpleUrlList.Models.csproj" />
+      <ProjectReference Include="..\SimpleUrlList.Shared\SimpleUrlList.Shared.csproj" />
     </ItemGroup>
 
 </Project>
