--- a/SimpleUrlListSLN/SimpleUrlList.Web/appsettings.json
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/appsettings.json
@@ -7,9 +7,13 @@
   },
   "AllowedHosts": "*",
   "AuthOptions": {
-    "ApiKey": ""
+    "ApiKey": "",
+    "SaltHash": "ThisIsAnExampleSaltHash"
   },
-  "AppOptions":{
-    "ApiUrl":"https://localhost:5559"
+  "AppOptions": {
+    "ApiUrl": "https://localhost:5559"    
+  },
+  "DataOptions": {
+    "ConnectionString": ""
   }
 }
