adding repositories and CRUD operation for links and groups

--- a/SimpleUrlListSLN/SimpleUrlList.Api/appsettings.json
+++ b/SimpleUrlListSLN/SimpleUrlList.Api/appsettings.json
@@ -7,7 +7,6 @@
   },
   "AllowedHosts": "*",
   "AuthOptions": {
-    "ApiKey": "",
-    "SaltHash": "ThisIsAnExampleSaltHash"
+    "ApiKey": ""
   }
 }
