--- a/SimpleUrlListSLN/SimpleUrlList.Web/appsettings.json
+++ b/SimpleUrlListSLN/SimpleUrlList.Web/appsettings.json
@@ -7,8 +7,7 @@
   },
   "AllowedHosts": "*",
   "AuthOptions": {
-    "ApiKey": "",
-    "SaltHash": "ThisIsAnExampleSaltHash"
+    "ApiKey": ""
   },
   "AppOptions": {
     "ApiUrl": "https://localhost:5559"    
