adding services to API project as well and updating docker files

--- a/SimpleUrlListSLN/SimpleUrlList.Api/SimpleUrlList.Api.csproj
+++ b/SimpleUrlListSLN/SimpleUrlList.Api/SimpleUrlList.Api.csproj
@@ -14,11 +14,9 @@
     </ItemGroup>
 
     <ItemGroup>
-      <Folder Include="Controllers\" />
-    </ItemGroup>
-
-    <ItemGroup>
+      <ProjectReference Include="..\SimpleUrlList.Interfaces\SimpleUrlList.Interfaces.csproj" />
       <ProjectReference Include="..\SimpleUrlList.Shared\SimpleUrlList.Shared.csproj" />
+      <ProjectReference Include="..\SimpleUrlList.SQL\SimpleUrlList.SQL.csproj" />
     </ItemGroup>
 
 </Project>
