fixing problem with javascript and login into the system

--- a/Yaml/03-web-service.yaml
+++ b/Yaml/03-web-service.yaml
@@ -2,10 +2,10 @@
 kind: Service
 metadata:
   name: sulweb-service
-  namespace: sul
+  namespace: play
 spec:
   type: LoadBalancer
   ports:
     - port: 80
   selector:
-    app: sul-web
+    app: web
