--- a/Yaml/02-web.yaml
+++ b/Yaml/02-web.yaml
@@ -2,7 +2,7 @@
 kind: Deployment
 metadata:
   name: sul-web
-  namespace: sul
+  namespace: play
 spec:
   replicas: 1
   selector:
@@ -22,7 +22,7 @@ spec:
             - name: SqlOptions__ConnectionString
               value: ""
             - name: AppOptions__ClientApiUrl
-              value: "http://sul.svc.cluster.local/webapi"
+              value: "http://play.svc.cluster.local/api/"
           resources:
             requests:
               cpu: 100m
