--- a/Yaml/02-web.yaml
+++ b/Yaml/02-web.yaml
@@ -17,9 +17,9 @@ spec:
         "kubernetes.io/os": linux
       containers:
         - name: web
-          image: mcr.azurecr.io/sul/web:1.0
+          image: meetupsul.azurecr.io/web:latest
           env:
-            - name: SqlOptions__ConnectionString
+            - name: DataOptions__ConnectionString
               value: ""
             - name: AppOptions__ClientApiUrl
               value: "http://play.svc.cluster.local/api/"
