--- a/Yaml/04-webapi.yaml
+++ b/Yaml/04-webapi.yaml
@@ -1,8 +1,8 @@
 ﻿apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: webapi
-  namespace: sul
+  name: api
+  namespace: ntk
 spec:
   replicas: 1
   selector:
@@ -17,10 +17,12 @@ spec:
         "kubernetes.io/os": linux
       containers:
         - name: sul-back
-          image: meetupsul.azurecr.io/web:novalidate
+          image: meetupsul.azurecr.io/api:novalidate
           env:
             - name: DataOptions__ConnectionString
               value: ""
+            - name: AuthOptions__BaseUrl
+              value: "http://4.225.37.67/"
           resources:
             requests:
               cpu: 100m
@@ -29,4 +31,16 @@ spec:
               cpu: 250m
               memory: 256Mi
           ports:
-            - containerPort: 80 
+            - containerPort: 8080 
+---
+apiVersion: v1
+kind: Service
+metadata:
+  name: api
+  namespace: ntk
+spec:
+  ports:
+    - port: 80
+      targetPort: 8080
+  selector:
+    app: back
